# Gnss_on_UAV_GUI

./: README.md  pyproject.toml
.github/workflows/: win-build-pdm-gitea.yml  win-release-gitea.yml
PySideApp/: __main__.py  main_run.py
PySideApp/Libs/: calculation_lib.py  custom_ui_parts.py  map_server.py  map_webchannel.py  nmea_decode.py  read_pva_file.py  readme.md  settings_serial.py  settings_window.py  test_runner.py  test_tasks_lib.py
PySideApp/Libs/Leaflet_map/: Readme.md  indexBaidu.html  indexGaoDe.html  indexGeoq.html  indexGoogle.html  indexOSM.html  indexTianDiTu.html
PySideApp/Libs/TestModuleLib/: DLT1578_2021.py  EXAMPLE.py  GAT1411_3_4_2017.py  GB42590_2023.py  GBT38058_2019.py  Tools.py  __init__.py
PySideApp/Libs/self_map/: Readme.md  baidu.html  bmap_track.js
PySideApp/Libs/vite-leaflet/: package.json  pnpm-lock.yaml
PySideApp/Libs/vite-leaflet/src/: App.vue  style.css
PySideApp/Libs/vite-leaflet/src/components/: DistanceTool.js  DistanceTool.ts  LeafletChinaProviders.js  LeafletDistanceTool.vue
PySideApp/Libs/vite-leaflet/src/utils/: qwebchannel_vue.js
PySideApp/build_src/: NSIS_Licence.txt  NSIS_Script.nsi  readme.md
PySideApp/build_src/ui/: BasicInfoUI.ui  MainWindowUI.ui  MyUI.ui  SerialSettingsUi.ui  SettingsUI.ui  TestPlayerUI.ui  TestRunnerUI.ui  img_resource.qrc
PySideApp/pyui/: readme.md
PySideApp/scripts/: exec_command.py  readme.md  regen_ui.py  vport_debug.py
docs/: README.md
