[project]  # 请自行修改本板块信息
name = "Software"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "John Smith", email = "john@example.com"},
]
dependencies = [
    "pyside6>=6.8.3",
    "tqdm",
    "nuitka",
    "loguru",
    "qasync",
    "pandas>=2.2.3",
    "natsort>=8.4.0",
    "aioserial>=1.3.1",
]
requires-python = "<=3.13,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false  # 指定本项目本身不为发行包(即仅作虚拟环境使用)

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.ustc.edu.cn/pypi/simple"  # 此处可换用其他源
verify_ssl = false

[tool.pdm.scripts]  # 便捷脚本，此处默认main_run.py是主程序文件
test = {cmd = "python -m PySideApp --test"}
build = {cmd = [
    "nuitka",
    "--standalone",
    # "--windows-console-mode=disable",
    "--output-dir=dist",
    "--enable-plugin=pyside6,upx",
    "--windows-icon-from-ico=PySideApp/build_src/ico/app_icon.ico",
    "PySideApp"
]}
